# Encipharm

./: .firebaserc  .gitignore  .vercelignore  README.md  asd  iniciar-enci-local.bat  iniciar-encipharm-local.bat  vercel.json
Backend/: .env.example  .vercelignore  README.md  pyproject.toml  requirements.txt
Backend/app/: docs.py  main.py
Backend/app/api/: auth.py  clientes.py  comercial.py  competencia.py  dashboard.py  rag.py  users.py
Backend/app/core/: auth.py  config.py  errors.py  headers.py  rate_limit.py  readiness.py
Backend/app/models/: cliente.py  comercial.py  competencia.py  dashboard.py  rag.py  user.py  usuario.py
Backend/app/routers/: clientes.py  usuarios.py
Backend/app/services/: audit.py  clientes.py  clientes_firestore.py  comercial.py  competencia.py  dashboard.py  firebase.py  firestore.py  llm_service.py  rag_service.py  storage_service.py  users.py  usuarios.py
Backend/scripts/: seed_carolaine_demo_data.py  seed_max_wellq_demo.py
Backend/tests/: test_api_smoke.py  test_clientes_api.py  test_clientes_permissions.py  test_comercial_flow.py  test_llm_prompt.py  test_rag_conversations.py  test_rag_crm_tools.py  test_rag_internal_context.py  test_readiness.py  test_security_hardening.py  test_storage_service.py  test_users_api.py
api/: [...path].js
docs/: README.md  architecture.md  cierre-proyecto.md  deploy-vercel-frontend.md  deploy-vercel-vendedor-app.md  estado-proyecto.md  forecast-export.md  informe-evolucion-proyecto.html  resumen-ejecutivo-tecnico-enci.html  resumen-ejecutivo-tecnico-encipharm.html  setup.md
flutter_vendedor/: README.md  firebase.json  pubspec.yaml
frontend/: .env.example  (+5 more)
(+211 files in other folders)
