[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "firebase-admin>=7.4.0",
    "google-cloud-firestore>=2.27.0",
    "google-cloud-storage>=2.19.0",
    "httpx>=0.28.1",
    "chromadb>=0.4.24",
    "openai>=1.58.1",
    "pydantic[email]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pypdf>=4.3.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.21",
    "sentence-transformers>=3.0.1",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
